--- a/0729-Boostrap/css/style.css
+++ b/0729-Boostrap/css/style.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 @font-face {
-  font-family: 'icomoon';
+  font-family: "icomoon";
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
   src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
   font-weight: normal;
@@ -160,7 +161,7 @@ h1, h2, h3, h4, h5, h6, figure {
   bottom: 25px;
   left: 0;
   right: 0;
-  content: '';
+  content: "";
   width: 58%;
   height: 2px;
   background: #66D37E;
@@ -413,7 +414,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h1, #fh5co-hero .flexslider .slider-text > .slider-text-inner h2 {
   margin: 0;
   padding: 0;
-  color: black;
+  color: white;
   font-family: "Oxygen", sans-serif;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
@@ -444,13 +445,11 @@ h1, h2, h3, h4, h5, h6, figure {
     font-size: 30px;
   }
 }
-#fh5co-hero .flexslider .slider-text > .slider-text-inner s
-.fh5co-lead {
+#fh5co-hero .flexslider .slider-text > .slider-text-inner s .fh5co-lead {
   font-size: 20px;
   color: #fff;
 }
-#fh5co-hero .flexslider .slider-text > .slider-text-inner s
-.fh5co-lead .icon-heart {
+#fh5co-hero .flexslider .slider-text > .slider-text-inner s .fh5co-lead .icon-heart {
   color: #d9534f;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner .btn {
@@ -486,12 +485,12 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   #fh5co-about,
-  #fh5co-services,
-  #fh5co-contact,
-  #fh5co-work,
-  #fh5co-blog,
-  #fh5co-counter,
-  #fh5co-footer {
+#fh5co-services,
+#fh5co-contact,
+#fh5co-work,
+#fh5co-blog,
+#fh5co-counter,
+#fh5co-footer {
     padding: 3em 1em;
   }
 }
@@ -626,7 +625,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: black;
   width: 100%;
   font-weight: 400;
-  margin-bottom: .3em;
+  margin-bottom: 0.3em;
   font-family: "Source Sans Pro", sans-serif;
 }
 .fh5co-counters .fh5co-counter-label {
@@ -765,7 +764,7 @@ h1, h2, h3, h4, h5, h6, figure {
   bottom: 15px;
   left: 15px;
   right: 15px;
-  content: '';
+  content: "";
   border: 1px solid rgba(255, 255, 255, 0.4);
 }
 .blog-flex .featured-blog .desc-t {
@@ -884,7 +883,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .contact-info li i {
   position: absolute;
-  top: .3em;
+  top: 0.3em;
   left: 0;
   font-size: 18px;
   color: rgba(0, 0, 0, 0.3);
@@ -912,7 +911,7 @@ h1, h2, h3, h4, h5, h6, figure {
   border: 2px solid rgba(0, 0, 0, 0.8);
 }
 
-input[type="text"] {
+input[type=text] {
   height: 50px;
 }
 
@@ -1077,7 +1076,7 @@ input[type="text"] {
 #fh5co-offcanvas ul li.offcanvas-has-dropdown > a:after {
   position: absolute;
   right: 0px;
-  font-family: 'icomoon';
+  font-family: "icomoon";
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -1087,7 +1086,7 @@ input[type="text"] {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  content: "\e0c5";
+  content: "";
   font-size: 20px;
   color: rgba(255, 255, 255, 0.2);
   -webkit-transition: 0.5s;
@@ -1159,20 +1158,20 @@ input[type="text"] {
   width: 25px;
   height: 2px;
   color: #252525;
-  font: bold 14px/.4 Helvetica;
+  font: bold 14px/0.4 Helvetica;
   text-transform: uppercase;
   text-indent: -55px;
   background: #252525;
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
 }
 .fh5co-nav-toggle i::before, .fh5co-nav-toggle i::after {
-  content: '';
+  content: "";
   width: 25px;
   height: 2px;
   background: #252525;
   position: absolute;
   left: 0;
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
 }
 .fh5co-nav-toggle.fh5co-nav-white > i {
   color: #fff;
