--- a/0729-Boostrap/sass/style.scss
+++ b/0729-Boostrap/sass/style.scss
@@ -492,7 +492,7 @@ h1, h2, h3, h4, h5, h6, figure {
 				h1, h2 {
 					margin: 0;
 					padding: 0;
-					color: rgba(0,0,0,1);
+					color: white;
 					font-family: $font-primary;
 				}
 				h1 {
