animate-box : images ,sass(desc) ,text

--- a/0729-Boostrap/sass/style.scss
+++ b/0729-Boostrap/sass/style.scss
@@ -625,11 +625,12 @@ h1, h2, h3, h4, h5, h6, figure {
 		display: table-cell;
 		vertical-align: middle;
 		height: 270px;
-		background: $brand-white;
+		background: rgba(black,.4);
 		opacity: 0;
 		@include transition(.3s);
 		h3{
-			font-size: 14px;
+			font-size: 16px;
+			color: lighten($brand-white,60%);
 			-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
 			transition: transform 0.3s, opacity 0.3s;
 			-webkit-transform: translate3d(0, -15px, 0);
@@ -637,7 +638,7 @@ h1, h2, h3, h4, h5, h6, figure {
 		}
 		span{
 			display: block;
-			color: lighten($brand-black,60%);
+			color: lighten($brand-white,60%);
 			font-size: 12px;
 			-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
 			transition: transform 0.3s, opacity 0.3s;
@@ -645,7 +646,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			transform: translate3d(0, 15px, 0);
 		}
 		@media screen and(max-width: $screen-sm){
-			opacity: 1;
+			opacity: 0.1;
 			background: transparent !important;
 			h3{
 				-webkit-transform: translate3d(0, 0, 0);
